--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <div class="layout-box">
     <div class="top-bar">
-        <h1>Simple Note App</h1>    
+        <h1>Simple Note App v1</h1>    
     </div>
     <div class="page-content">
         <router-outlet></router-outlet>
